# Temp

./: CharacterizationTestOutput.txt
legacy_code_and_refactoring/: .clang-format  .gitignore  BrieItem.h  CMakeLists.txt  ConcertPassItem.h  ConjuredItem.h  GildedRose.cc  GildedRose.h  GildedRoseCharacterizationTests.cc  GildedRoseMain.cc  GildedRoseUnitTests.cc  IItem.h  ItemUnitTest.cc  NormalItem.h  SulfurasItem.h
legacy_code_and_refactoring/ext/googletest/googlemock/docs/: DevGuide.md  ForDummies.md
legacy_code_and_refactoring/ext/googletest/googletest/: README.md
legacy_code_and_refactoring/ext/googletest/googletest/docs/: AdvancedGuide.md  DevGuide.md
